Adding basic UI for adding cards.

--- a/application/static/play-huk-a-buk.html
+++ b/application/static/play-huk-a-buk.html
@@ -27,7 +27,16 @@
         <p>You must sign in to play!</p>
       </div>
       <div id="cards" class="hidden">
-      Cards go Here
+        <h1>Cards</h1>
+        <table>
+          <tr>
+            <td class="noLeft noTop noBottom"></td>
+            <td class="noTop noBottom"></td>
+            <td class="noTop noBottom"></td>
+            <td class="noTop noBottom"></td>
+            <td class="noRight noTop noBottom"></td>
+          </tr>
+        <table>
       </div>
     </div>
   </body>
