--- a/application/static/play-huk-a-buk.html
+++ b/application/static/play-huk-a-buk.html
@@ -5,7 +5,6 @@
     <title>TicTacToe</title>
     <!-- Config must be loaded first. -->
     <script type="text/javascript" src="/js/config.js"></script>
-    <script type="text/javascript" src="/js/base.js"></script>
     <link rel="stylesheet" href="/css/base.css" />
     <script type="text/javascript" src="/js/render-huk-a-buk.js"></script>
   </head>
@@ -18,7 +17,7 @@
           <div id="signinButtonContainer" class="visible">
             <div id="signinButton"></div>
           </div>
-          <a href="#" onclick="google.devrel.samples.ttt.signout();" id="signedInStatus">Sign Out</a>
+          <a href="#" onclick="hukABukApp.signout();" id="signedInStatus">Sign Out</a>
         </div>
         <span id="userLabel">(not signed in)</span>
       </div>
