Removing mentions of tic tac toe.

--- a/application/static/play-huk-a-buk.html
+++ b/application/static/play-huk-a-buk.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>TicTacToe</title>
+    <title>Huk-A-Buk</title>
     <!-- Config must be loaded first. -->
     <script type="text/javascript" src="/js/config.js"></script>
     <link rel="stylesheet" href="/css/base.css" />
