Adding base frame for games.

--- a/application/static/game.html
+++ b/application/static/game.html
@@ -24,7 +24,7 @@
       </div>
       <div id="warning">
         <img src="/images/caution.gif" />
-        <p>You must sign in to play!</p>
+        <p>You must sign in</p>
       </div>
       <div id="cards" class="hidden">
         <h1>Cards</h1>
