--- a/application/static/main.html
+++ b/application/static/main.html
@@ -26,6 +26,11 @@
         <img src="/images/caution.gif" />
         <p>You must sign in</p>
       </div>
+      <div id="games" class="hidden">
+        <h1>Games</h1>
+        <table>
+        <table>
+      </div>
     </div>
   </body>
 </html>
