Adding list of games on main page.

--- a/application/static/game.html
+++ b/application/static/game.html
@@ -36,7 +36,7 @@
             <td class="noTop noBottom"></td>
             <td class="noRight noTop noBottom"></td>
           </tr>
-        <table>
+        </table>
       </div>
     </div>
   </body>
