--- a/application/static/main.html
+++ b/application/static/main.html
@@ -29,7 +29,7 @@
       <div id="games" class="hidden">
         <h1>Games</h1>
         <table>
-        <table>
+        </table>
       </div>
     </div>
   </body>
